# gettext-macros

./: .gitignore  Cargo.toml  README.md
gettext-utils/: Cargo.toml
gettext-utils/src/: lib.rs
po/: test.pot
src/: lib.rs
tests/: main.rs
