[package]
name = "gettext-macros"
version = "0.4.0"
authors = ["Ana Gelez <ana@gelez.xyz>"]
description = "A few proc-macros to help internationalizing Rust applications"
repository = "https://github.com/Plume-org/gettext-macros"
license = "GPL-3.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
gettext-utils = { path = "gettext-utils", version = "0.1.0" }
gettext = { git = "https://github.com/Plume-org/gettext", rev = "294c54d74c699fbc66502b480a37cc66c1daa7f3" }

[workspace]
members = ["gettext-utils"]
