[package]
name = "gettext-macros"
version = "0.4.0"
authors = ["Ana Gelez <ana@gelez.xyz>"]
description = "A few proc-macros to help internationalizing Rust applications"
repository = "https://github.com/Plume-org/gettext-macros"
license = "GPL-3.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
gettext = "0.3"
runtime-fmt = "0.3"
