[package]
name = "gettext-macros"
version = "0.6.0"
authors = ["Plume contributors"]
description = "A few proc-macros to help internationalizing Rust applications"
repository = "https://github.com/Plume-org/gettext-macros"
license = "GPL-3.0"
edition = "2018"

[lib]
proc-macro = true

[dependencies]
gettext = "0.4"
gettext-utils = "0.1.0"
proc-macro2 = { version = "1.0.19", features = ["span-locations"] }
quote = "1.0.7"
syn = "1.0"

[workspace]
members = ["gettext-utils"]
